Update the home page copy.
Signed-off-by: Mike Korte <korte@rivet.works>

--- a/_includes/card-documentation.html
+++ b/_includes/card-documentation.html
@@ -4,7 +4,7 @@
             <i class="icon fa fa-book"></i>
         </div><!--//icon-holder-->
         <h3 class="title">Documentation</h3>
-        <p class="intro">The developer documentation</p>
+        <p class="intro">API documentation intended for developers to integrate with or build custom implementations on the Rivet Works platform.</p>
         <a class="link" href="{{ "/documentation" | prepend: site.baseurl }}"><span></span></a>
     </div><!--//item-inner-->
 </div><!--//item-->
