--- a/_includes/card-pad.html
+++ b/_includes/card-pad.html
@@ -4,7 +4,7 @@
             <i class="icon fa fa-dashboard"></i>
         </div><!--//icon-holder-->
         <h3 class="title">PAD</h3>
-        <p class="intro">The Platform Administative Dashboard</p>
+        <p class="intro">Access the Rivet Works Platform Administrative Dashboard to access content, view analytics, update your settings and access API keys.</p>
         <a class="link" href="http://engage.rivet.works/"><span></span></a>
     </div><!--//item-inner-->
 </div><!--//item-->
