--- a/_includes/card-resource-library.html
+++ b/_includes/card-resource-library.html
@@ -4,7 +4,7 @@
             <i class="icon fa fa-life-saver"></i>
         </div><!--//icon-holder-->
         <h3 class="title">Resource Library</h3>
-        <p class="intro">The resource library</p>
+        <p class="intro">Instructions, FAQs and how-to knowledgebase articles for all Rivet Works platform users.</p>
         <a class="link" href="http://resources.rivet.works/"><span></span></a>
     </div><!--//item-inner-->
 </div><!--//item-->
