--- a/_includes/cards-section.html
+++ b/_includes/cards-section.html
@@ -1,8 +1,8 @@
 <section class="cards-section text-center">
     <div class="container">
-        <h2 class="title">Getting started is easy!</h2>
+        <h2 class="title">Be Riveting!</h2>
         <div class="intro">
-            <p>Welcome to prettyDocs. This landing page is an example of how you can use a card view to present segments of your documentation. You can customise the icon fonts based on your needs.</p>
+            <p>Welcome to the Rivet Works Developer site. Inside is documentation for integrating with our APIs as well as links to other support resources.</p>
             <!-- <div class="cta-container">
                 <a class="btn btn-primary btn-cta" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-cloud-download"></i> Download Now</a>
             </div> -->
