Change the font to Lato
Signed-off-by: Mike Korte <korte@rivet.works>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <div class="branding">
             <h1 class="logo">
                 <a href="/">
-                  <span class="text-highlight">{% include logo-svg.html width="86.1" height="20" %} </span><span class="text-bold">Developer</span>
+                  <span class="text-highlight">{% include logo-svg.html width="86.1" height="20" %}&nbsp;</span><span class="text-bold">Developer</span>
                 </a>
             </h1>
         </div><!--//branding-->
