--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: PrettyDocs - Responsive Website Template for documentations
  * Version: 1.0
  * Author: Xiaoying Riley
@@ -9,7 +9,7 @@
 /* Theme default */
 /* ======= Base ======= */
 body {
-  font-family: 'Open Sans', arial, sans-serif;
+  font-family: 'Lato', HelveticaNeue, sans-serif;
   color: #494d55;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
