--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="branding">
             <h1 class="logo">
-              <span class="text-highlight">{% include logo-svg.html width="116.2" height="27" %} </span><span class="text-bold">Developer</span>
+              <span class="text-highlight">{% include logo-svg.html width="116.2" height="27" %}&nbsp;</span><span class="text-bold">Developer</span>
             </h1>
         </div><!--//branding-->
 
