Add guides and the Implementation Guide document.
Signed-off-by: Mike Korte <korte@rivet.works>

--- a/_includes/cards-section.html
+++ b/_includes/cards-section.html
@@ -10,11 +10,13 @@
         </div><!--//intro-->
         <div id="cards-wrapper" class="cards-wrapper row">
 
-            {% include card-documentation.html %}
+          {% include card-documentation.html %}
 
-            {% include card-resource-library.html %}
+          {% include card-guides.html %}
 
-            {% include card-pad.html %}
+          {% include card-resource-library.html %}
+
+          {% include card-pad.html %}
 
         </div><!--//cards-->
 
