--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         <div class="doc-wrapper">
     <div class="container">
         <div id="doc-header" class="doc-header text-center">
-            <h1 class="doc-title"><span aria-hidden="true" class="icon fa fa-book"></span> {{page.title}}</h1>
+            <h1 class="doc-title"><span aria-hidden="true" class="icon {{ layout.collection-icon }}"></span> {{page.title}}</h1>
             <!-- <div class="meta"><i class="fa fa-clock-o"></i> Last updated (Mike was here, finally): {{page.date | date: '%B %d, %Y'}} </div> -->
         </div><!--//doc-header-->
         <div class="doc-body">
