--- a/_includes/card-guides.html
+++ b/_includes/card-guides.html
@@ -4,7 +4,7 @@
             <i class="icon fa fa-binoculars"></i>
         </div><!--//icon-holder-->
         <h3 class="title">Guides</h3>
-        <p class="intro">Dolor in hendrerit in vulputate velit esse molestie consequat vel illum. Qui nunc nobis videntur parum clari fiant sollemnes in.</p>
+        <p class="intro">General tutorials and reference materials for utilizing and integrating your Rivet Works solution with other platforms.</p>
         <a class="link" href="{{ "/guides" | prepend: site.baseurl }}"><span></span></a>
     </div><!--//item-inner-->
 </div><!--//item-->
