--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,7 @@
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="{{ "/assets/css/styles.css" | prepend: site.baseurl }}">
+    <link id="theme-style" rel="stylesheet" href="{{ "/assets/css/rivet.css" | prepend: site.baseurl }}">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -34,8 +35,6 @@
 
     <div class="page-wrapper">
         {% include header-home.html %}
-
-        {% include cards-section.html %}
 
         {{ content }}
 
