--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@
 /* ======= Base ======= */
 body {
   font-family: 'Lato', HelveticaNeue, sans-serif;
-  color: #00cbcb;
+  color: #494d55;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -75,8 +75,8 @@ a.btn .fa {
 }
 .btn-primary,
 a.btn-primary {
-  background: #00cbcb;
-  border: 1px solid #00cbcb;
+  background: #40babd;
+  border: 1px solid #40babd;
   color: #fff !important;
 }
 .btn-primary:hover,
@@ -273,7 +273,7 @@ select {
   -webkit-appearance: none;
 }
 #topcontrol {
-  background: #00cbcb;
+  background: #40babd;
   color: #fff;
   text-align: center;
   display: inline-block;
@@ -309,7 +309,7 @@ select {
 .header {
   background: #494d55;
   color: rgba(255, 255, 255, 0.85);
-  border-top: 5px solid #00cbcb;
+  border-top: 5px solid #40babd;
   padding: 30px 0;
 }
 .header a {
@@ -328,7 +328,7 @@ select {
   text-decoration: none;
 }
 .branding .text-highlight {
-  color: #00cbcb;
+  color: #40babd;
 }
 .body-green .branding .text-highlight {
   color: #75c181;
@@ -354,7 +354,7 @@ select {
 }
 .branding .icon {
   font-size: 24px;
-  color: #00cbcb;
+  color: #40babd;
 }
 .body-green .branding .icon {
   color: #75c181;
@@ -401,7 +401,7 @@ select {
   padding: 15px 0;
 }
 .footer a {
-  color: #00cbcb;
+  color: #40babd;
 }
 .footer .fa-heart {
   color: #EA5395;
@@ -418,7 +418,7 @@ select {
   margin-bottom: 30px;
 }
 .doc-header .doc-title {
-  color: #00cbcb;
+  color: #40babd;
   margin-top: 0;
   font-size: 36px;
 }
@@ -803,7 +803,7 @@ select {
 }
 .doc-menu > li > a:hover,
 .doc-menu > li > a:focus {
-  color: #00cbcb;
+  color: #40babd;
   text-decoration: none;
   background: none;
 }
@@ -833,8 +833,8 @@ select {
 }
 .doc-menu > li.active > a {
   background: none;
-  border-left: 4px solid #00cbcb;
-  color: #00cbcb;
+  border-left: 4px solid #40babd;
+  color: #40babd;
   font-weight: 600;
 }
 .body-green .doc-menu > li.active > a {
@@ -880,7 +880,7 @@ select {
   background: none;
 }
 .doc-sub-menu > li > a:hover {
-  color: #00cbcb;
+  color: #40babd;
   text-decoration: none;
   background: none;
 }
@@ -907,7 +907,7 @@ select {
 }
 .doc-sub-menu > li.active > a {
   background: none;
-  color: #00cbcb;
+  color: #40babd;
 }
 .body-green .doc-sub-menu > li.active > a {
   color: #75c181;
@@ -1099,7 +1099,7 @@ select {
 }
 .landing-page .branding .icon {
   font-size: 32px;
-  color: #00cbcb;
+  color: #40babd;
 }
 .landing-page .tagline {
   font-weight: 600;
@@ -1194,13 +1194,13 @@ select {
   background: #f5f5f5;
 }
 .cards-section .item-primary .item-inner {
-  border-top: 3px solid #00cbcb;
+  border-top: 3px solid #40babd;
 }
 .cards-section .item-primary .item-inner:hover .title {
   color: #2d8284;
 }
 .cards-section .item-primary .icon {
-  color: #00cbcb;
+  color: #40babd;
 }
 .cards-section .item-green .item-inner {
   border-top: 3px solid #75c181;
