--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@
 /* ======= Base ======= */
 body {
   font-family: 'Lato', HelveticaNeue, sans-serif;
-  color: #494d55;
+  color: #001234;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
