incremental primary color changes in the style.css to match the new design being deploy on our homepage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -273,7 +273,7 @@ select {
   -webkit-appearance: none;
 }
 #topcontrol {
-  background: #40babd;
+  background: #00cbcb;
   color: #fff;
   text-align: center;
   display: inline-block;
