--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,7 +307,7 @@ select {
 }
 /* ====== Header ====== */
 .header {
-  background: #494d55;
+  background: #00cbcb;
   color: rgba(255, 255, 255, 0.85);
   border-top: 5px solid #40babd;
   padding: 30px 0;
