--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,9 +307,9 @@ select {
 }
 /* ====== Header ====== */
 .header {
-  background: #00cbcb;
+  background: #494d55;
   color: rgba(255, 255, 255, 0.85);
-  border-top: 5px solid #40babd;
+  border-top: 5px solid #00cbcb;
   padding: 30px 0;
 }
 .header a {
