incremental primary color changes in the style.css to match the new design being deploy on our homepage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -328,7 +328,7 @@ select {
   text-decoration: none;
 }
 .branding .text-highlight {
-  color: #40babd;
+  color: #00cbcb;
 }
 .body-green .branding .text-highlight {
   color: #75c181;
