--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1194,7 +1194,7 @@ select {
   background: #f5f5f5;
 }
 .cards-section .item-primary .item-inner {
-  border-top: 3px solid #40babd;
+  border-top: 3px solid #00cbcb;
 }
 .cards-section .item-primary .item-inner:hover .title {
   color: #2d8284;
